# bme-driver

./: README.md  pyproject.toml  setup.cfg
.github/workflows/: publish.yaml  test.yaml
src/bme/: __init__.py  auto.py  common.py  exceptions.py  measurement.py
src/bme/bme280/: __init__.py  bme280.py  calibration.py
src/bme/bmp280/: __init__.py  bmp280.py  calibration.py
tests/bme280/: test_bme280.py  test_bme280_calibration.py
tests/bmp280/: test_bmp280_calibration.py
